--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   border_bottom_navigation_bar: ^0.0.4
   animated_react_button: ^0.0.4
   video_player: ^2.7.2
+  buttons_tabbar: ^1.3.8
 
 
 dev_dependencies:
